# perna-mix-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml  main.py  render.yaml  requirements.txt
.claude/: settings.local.json
.github/workflows/: render.yml  shuttle.yml
.shuttle/: config.toml
bot/: client.py  commands.py  constants.py  utils.py  web_server.py
src/: main.rs
